--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+  
+  <input type="button" value="Character">
+  <input type="button" value="Movies">
+  <input type="button" value="Starships">
+  <input type="button" value="Species">
+  <input type="button" value="Vehicles">
+  <input type="button" value="Planets">
+  <input type="button" value="Go">
   <app-root></app-root>
 
 </body>
